zarf/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aegir
  labels:
    app.kubernetes.io/managed-by: zarf
    app.kubernetes.io/part-of: aegir-leaderboard
